Fixed nextgen contact type not showing all inbound options

--- a/src/main/webapp/bundles/health/less/simplesDialog.less
+++ b/src/main/webapp/bundles/health/less/simplesDialog.less
@@ -93,6 +93,10 @@
 		}
 
 		.simples-dialog-inbound {
+			&.show-nextgen {
+				display: block !important;
+			}
+
 			display: none;
 		}
 
